# lite-render-2d

./: CLAUDE_CODE_PROMPT.md  Cargo.toml  LLMS.md  README.md  README_PROMPT.md  TESTING.md  full_test.md
.claude/: settings.local.json
core/: Cargo.toml
core/src/: atlas.rs  audio.rs  bitmap_font.rs  camera.rs  collision.rs  dash.rs  font_atlas.rs  input.rs  lib.rs  particle.rs  path_tessellation.rs  post_process.rs  prelude.rs  renderer.rs  rich_text.rs  sdf_font.rs  sprite_sheet.rs  svg.rs  tessellation.rs  text.rs  texture.rs  tilemap.rs  trail.rs  transform_stack.rs  types.rs
core/src/tests/: atlas_test.rs  bitmap_font_test.rs  camera_test.rs  collision_test.rs  dash_test.rs  font_atlas_test.rs  mod.rs  particle_test.rs  path_tessellation_test.rs  sdf_font_test.rs  sprite_sheet_test.rs  tessellation_test.rs  texture_test.rs  tilemap_test.rs  trail_test.rs  transform_stack_test.rs  types_test.rs
docs/: advanced.md  camera.md  getting-started.md  guide.md  migration.md  particles.md  performance.md  quickref.md  shapes.md  sprites.md  text.md  tilemaps.md
examples/: advanced_features.rs  all_new_features.rs  benchmark_simple.rs  feature_showcase.rs  gif_capture.rs  hello.rs  integration_tests.rs  interactive.rs  mixed.rs  new_features.rs  next_features.rs  perf_metrics.rs  shapes.rs  sprites.rs  stress_test.rs  test_optimizations.rs
glow-backend/: Cargo.toml
glow-backend/src/: batch.rs  context.rs  lib.rs  renderer.rs  shaders.rs
wgpu-backend/: Cargo.toml
wgpu-backend/src/: batch.rs  lib.rs  renderer.rs  shaders.rs
