[package]
name = "lite-render-2d-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
winit = { workspace = true }
lyon_tessellation = { workspace = true, optional = true }
fontdue = { workspace = true, optional = true }

[features]
default = ["paths", "text"]
paths = ["dep:lyon_tessellation"]
text = ["dep:fontdue"]
