[package]
name = "lite-render-2d-glow"
version = "0.1.0"
edition = "2021"

[features]
default = ["use-glow"]
use-glow = []
use-wgpu = []  # unused here, silences cfg warning from shared examples

[dependencies]
lite-render-2d-core = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
image = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }

[[example]]
name = "shapes"
path = "../examples/shapes.rs"

[[example]]
name = "sprites"
path = "../examples/sprites.rs"

[[example]]
name = "mixed"
path = "../examples/mixed.rs"

[[example]]
name = "new_features"
path = "../examples/new_features.rs"

[[example]]
name = "advanced_features"
path = "../examples/advanced_features.rs"

[[example]]
name = "feature_showcase"
path = "../examples/feature_showcase.rs"

[[example]]
name = "next_features"
path = "../examples/next_features.rs"

[[example]]
name = "all_new_features"
path = "../examples/all_new_features.rs"

[[example]]
name = "test_optimizations"
path = "../examples/test_optimizations.rs"
