[package]
name = "lite-render-2d-wgpu"
version = "0.1.0"
edition = "2021"

[features]
default = ["use-wgpu"]
use-wgpu = []
use-glow = []  # unused here, silences cfg warning from shared examples

[dependencies]
lite-render-2d-core = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
winit = { workspace = true }

[[example]]
name = "hello"
path = "../examples/hello.rs"

[[example]]
name = "shapes"
path = "../examples/shapes.rs"

[[example]]
name = "sprites"
path = "../examples/sprites.rs"

[[example]]
name = "mixed"
path = "../examples/mixed.rs"

[[example]]
name = "new_features"
path = "../examples/new_features.rs"

[[example]]
name = "advanced_features"
path = "../examples/advanced_features.rs"

[[example]]
name = "feature_showcase"
path = "../examples/feature_showcase.rs"

[[example]]
name = "next_features"
path = "../examples/next_features.rs"

[[example]]
name = "interactive"
path = "../examples/interactive.rs"

[[example]]
name = "benchmark_simple"
path = "../examples/benchmark_simple.rs"

[[example]]
name = "all_new_features"
path = "../examples/all_new_features.rs"

[[example]]
name = "swarm"
path = "../examples/swarm.rs"
